# Paper_review

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  build_err_v2b.txt  build_error3.txt  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  reward.py
data/: papers.json
server/: app.py  peer_review_environment.py
ui/: dashboard.html
