[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "peer-review-env"
version = "0.1.0"
description = "OpenEnv environment for automated scientific peer review via RLVR"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "scipy",
    "numpy",
    "openai",
    "PyPDF2",
    "python-multipart",
    "huggingface_hub",
    "requests",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
